--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Pretendard', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
